Fix a row alignement issue

--- a/nivls_website/blog/static/blog/css/blog.less
+++ b/nivls_website/blog/static/blog/css/blog.less
@@ -191,6 +191,10 @@ section#post-list {
 	height: 40px;
     }
 
+    .row {
+	margin-left: 0px;
+    }
+
     section.description {
 	height: 115px;
     }
